Added more documentation for REST interfaces.